# Res_TP2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Serialize/: CMakeLists.txt
Serialize/headers/: Compressor.h  Deserializer.h  Framework.h  Player.h  Serializer.h
Serialize/src/: Compressor.cpp  Deserializer.cpp  Player.cpp  Serializer.cpp
